# 1D_Bi_Plasma

./: .gitignore  CMakeLists.txt  EQUATION.md  LICENSE  README.md
.cache/clangd/index/: AlignedBox.h.300CB7B16E972292.idx  AngleAxis.h.B31E7E067366CF91.idx  ArithmeticSequence.h.D7C1738AF5779AF1.idx  Array.h.9528039D85B45319.idx  ArrayBase.h.D64277C384A02690.idx  ArrayCwiseBinaryOps.h.3DC2062A48DBB551.idx  ArrayCwiseUnaryOps.h.A151C6284BF84D41.idx  ArrayWrapper.h.5BE9B0499C070853.idx  Assign.h.B569EF3C5C2A0CCF.idx  AssignEvaluator.h.9EAC4C66EBCCDF5E.idx  AssignmentFunctors.h.541597D8BA6D512C.idx  BDCSVD.h.8566FA331DB595D7.idx  BFloat16.h.180EB3C9DB26A4A8.idx  BandMatrix.h.CA0CAECCB6BCD530.idx  BinaryFunctors.h.2550AF8B21920968.idx  BlasUtil.h.D8DC2CC5B1B069B2.idx  Block.h.7F2806081879B07D.idx  BlockHouseholder.h.036A1BDBF6BF06D3.idx  BlockMethods.h.33E115DC2800D854.idx  BooleanRedux.h.741B93B7704479C3.idx  Cholesky.2FF1999BE004DFDB.idx  ColPivHouseholderQR.h.662259EC0F2ADCB5.idx  CommaInitializer.h.E7182238616FCF2A.idx  CommonCwiseBinaryOps.h.56788513D1B95308.idx  CommonCwiseUnaryOps.h.13CBD3A17184A79C.idx  CompleteOrthogonalDecomposition.h.0E6A28117F901C4B.idx  Complex.h.1FBEC0725C4ACF09.idx  ComplexEigenSolver.h.3FF7A327092091B0.idx  ComplexSchur.h.3A36EB550B0A46F5.idx  ConditionEstimator.h.49F4C21E8B0E84B0.idx  ConfigureVectorization.h.A83A6338DCD7C82A.idx  (+159 more)
include/: bi_system.hpp  constants.hpp  field.hpp  fourier.hpp  plasma.hpp  runge_kutta.hpp  system.hpp
src/: fourier.cpp  main.cpp  plasma.cpp  plot.py  plot_pulsation.py  plot_time.py  runge_kutta.cpp
